fix: correcting type mapping in UpdateTalkerMapper